--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
+  "private": false,
   "name": "@plokkke/nest-health-registry",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "A NestJS module providing a health check registry using @nestjs/terminus",
+  "author": "Antoine Caron <antoine@crn-tech.fr>",
+  "license": "MIT",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "keywords": [
+    "nestjs",
+    "health",
+    "terminus",
+    "monitoring"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf dist && tsc -p tsconfig.json",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "npm run build",
@@ -17,19 +30,8 @@
     "test:e2e:cov": "npm run test:e2e -- --coverage",
     "test:mut": "stryker run",
     "merge-cov": "npx istanbul-merge --out ./reports/tests/unified/coverage/coverage-final.json ./reports/tests/e2e/coverage/coverage-final.json ./reports/tests/unit/coverage/coverage-final.json; npx istanbul report --include ./reports/tests/unified/coverage/coverage-final.json --dir reports/tests/unified/coverage/lcov-report html",
-    "validate": "npm run lint && npm run build && npm run test:cov"
-  },
-  "keywords": [
-    "nestjs",
-    "health",
-    "terminus",
-    "monitoring"
-  ],
-  "author": "",
-  "license": "MIT",
-  "peerDependencies": {
-    "@nestjs/common": "^11.0.0",
-    "@nestjs/terminus": "^11.0.0"
+    "validate": "npm run lint && npm run build && npm run test:cov",
+    "prepublishOnly": "npm run validate"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.12",
@@ -52,6 +54,7 @@
     "eslint-plugin-prettier": "^5.2.5",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
+    "rimraf": "^5.0.0",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
     "typescript": "^5.8.2"
