--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "noFallthroughCasesInSwitch": false,
     "noImplicitReturns": true,
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
